--- a/Historia de cofla (B)/index.html
+++ b/Historia de cofla (B)/index.html
@@ -6,148 +6,128 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problema de Cofla (B)</title>
     <style>
-        .grid-container {
-            display: grid;
-            grid-template-rows: 50px;
-            grid-template-columns: repeat(4, minmax(min-content, max-content));
-            grid-auto-rows: 50px;
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f5f7fa;
+            padding: 20px;
         }
 
-        .grid-container .grid-item {
+        *, *::before, *::after {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(4, minmax(min-content, max-content));
+            grid-auto-rows: 50px;
+            gap: 10px;
+        }
+
+        .grid-item {
             padding: 10px;
             border: 1px solid #000;
             margin: 5px;
+            background-color: #fff;
+            border-radius: 5px;
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+        }
+
+        .btn-confirmar {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 12px 20px;
+            margin: 20px 0;
+            font-size: 16px;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn-confirmar:hover {
+            background-color: #45a049;
+        }
+
+        select {
+            background-color: #fff;
+            color: #333;
+            padding: 5px 10px;
+            border-radius: 5px;
+            border: 1px solid #fff;
+            cursor: pointer;
+            font-size: 15px;
+        }
+
+        option {
+            background-color: white;
+            color: #121212;
+            font-weight: normal;
+            padding: 5px 10px;
         }
     </style>
 </head>
 
 <body>
 
-
-    <div class="grid-container">
-        <div class="grid-item nombre">Leonardo Bringas</div>
-        <div class="grid-item email">leobringas@gmail.com</div>
-        <div class="grid-item materia">Matemática 3</div>
-        <div class="grid-item semana">
-            <select class="semana-elegida">
-                <option value="1">Semana 1</option>
-                <option value="2">Semana 2</option>
-                <option value="2">Semana 3</option>
-                <option value="2">Semana 4</option>
-                <option value="2">Semana 5</option>
-            </select>
-        </div>
-    </div>
-    <div class="grid-container">
-        <div class="grid-item nombre">Camila Fernández</div>
-        <div class="grid-item email">camifer@example.com</div>
-        <div class="grid-item materia">Historia Argentina</div>
-        <div class="grid-item semana">
-            <select class="semana-elegida">
-                <option value="1">Semana 1</option>
-                <option value="2">Semana 2</option>
-                <option value="2">Semana 3</option>
-                <option value="2">Semana 4</option>
-                <option value="2">Semana 5</option>
-            </select>
-        </div>
-    </div>
-    <div class="grid-container">
-        <div class="grid-item nombre">Tomás Herrera</div>
-        <div class="grid-item email">tomi.herrera@example.com</div>
-        <div class="grid-item materia">Geografía</div>
-        <div class="grid-item semana">
-            <select class="semana-elegida">
-                <option value="1">Semana 1</option>
-                <option value="2">Semana 2</option>
-                <option value="2">Semana 3</option>
-                <option value="2">Semana 4</option>
-                <option value="2">Semana 5</option>
-            </select>
-        </div>
-    </div>
-
+    <div class="grid-container"></div>
+    <button class="btn-confirmar">Confirmar Mesas</button>
 
     <script>
         const alumnos = [
-            {
-                nombre: "Leonardo Bringas",
-                email: "leobringas@gmail.com",
-                materia: "Matemática 3"
-            },
-            {
-                nombre: "Camila Fernández",
-                email: "camifer@example.com",
-                materia: "Historia Argentina"
-            },
-            {
-                nombre: "Matías Gómez",
-                email: "mati.gomez@mail.com",
-                materia: "Biología"
-            },
-            {
-                nombre: "Valentina Ríos",
-                email: "valen.rios@mail.com",
-                materia: "Física"
-            },
-            {
-                nombre: "Tomás Herrera",
-                email: "tomi.herrera@example.com",
-                materia: "Geografía"
-            },
-            {
-                nombre: "Sofía Márquez",
-                email: "sofia.mqz@mail.com",
-                materia: "Lengua y Literatura"
-            },
-            {
-                nombre: "Facundo Pérez",
-                email: "facuperez@example.com",
-                materia: "Química"
-            },
-            {
-                nombre: "Julieta Castro",
-                email: "julicas@mail.com",
-                materia: "Educación Cívica"
-            },
-            {
-                nombre: "Luciano Díaz",
-                email: "luciano.dz@gmail.com",
-                materia: "Informática"
-            },
-            {
-                nombre: "Martina López",
-                email: "martina.lopez@mail.com",
-                materia: "Filosofía"
-            },
-            {
-                nombre: "Agustín Romero",
-                email: "agusromero@example.com",
-                materia: "Matemática 2"
-            },
-            {
-                nombre: "Bianca Torres",
-                email: "biancatorres@gmail.com",
-                materia: "Economía"
-            },
-            {
-                nombre: "Ezequiel Ruiz",
-                email: "eze.ruiz@mail.com",
-                materia: "Educación Física"
-            },
-            {
-                nombre: "Renata Sánchez",
-                email: "renasanchez@example.com",
-                materia: "Arte"
-            }
+            { nombre: "Leonardo Bringas", email: "leobringas@gmail.com", materia: "Matemática 3" },
+            { nombre: "Camila Fernández", email: "camifer@example.com", materia: "Historia Argentina" },
+            { nombre: "Matías Gómez", email: "mati.gomez@mail.com", materia: "Biología" },
+            { nombre: "Valentina Ríos", email: "valen.rios@mail.com", materia: "Física" },
+            { nombre: "Tomás Herrera", email: "tomi.herrera@example.com", materia: "Geografía" },
+            { nombre: "Sofía Márquez", email: "sofia.mqz@mail.com", materia: "Lengua y Literatura" },
+            { nombre: "Facundo Pérez", email: "facuperez@example.com", materia: "Química" },
+            { nombre: "Julieta Castro", email: "julicas@mail.com", materia: "Educación Cívica" },
+            { nombre: "Luciano Díaz", email: "luciano.dz@gmail.com", materia: "Informática" },
+            { nombre: "Martina López", email: "martina.lopez@mail.com", materia: "Filosofía" },
+            { nombre: "Agustín Romero", email: "agusromero@example.com", materia: "Matemática 2" },
+            { nombre: "Bianca Torres", email: "biancatorres@gmail.com", materia: "Economía" },
+            { nombre: "Ezequiel Ruiz", email: "eze.ruiz@mail.com", materia: "Educación Física" },
+            { nombre: "Renata Sánchez", email: "renasanchez@example.com", materia: "Arte" }
         ];
 
-        for (alumno in alumnos) {
-            for (datos in alumnos[alumno]) {
-                console.log(alumnos[alumno][datos])
-            }
+        const boton = document.querySelector(".btn-confirmar"); // botonazo
+        const contenedor = document.querySelector(".grid-container"); // grid
+
+        for (let alumno of alumnos) {
+            const htmlCode = `
+                <div class="grid-item nombre">${alumno.nombre}</div>
+                <div class="grid-item email">${alumno.email}</div>
+                <div class="grid-item materia">${alumno.materia}</div>
+                <div class="grid-item semana">
+                    <select class="semana-elegida">
+                        <option value="1">Semana 1</option>
+                        <option value="2">Semana 2</option>
+                        <option value="3">Semana 3</option>
+                        <option value="4">Semana 4</option>
+                        <option value="5">Semana 5</option>
+                        <option value="6">Semana 6</option>
+                    </select>
+                </div>
+            `;
+            contenedor.innerHTML += htmlCode;
         }
 
+        boton.addEventListener("click", () => {
+            let confirmar = confirm("¿Realmente querés confirmar las mesas de examen?");
+            if (confirmar) {
+                document.body.removeChild(boton)
+                let elementos = document.querySelectorAll(".semana");
+                let semanasElegidas = document.querySelectorAll(".semana-elegida");
+                for (let elemento in elementos) {
+                    let semana = elementos[elemento];
+                    semana.innerHTML = semanasElegidas[elemento].options[semanasElegidas[elemento].selectedIndex].text;
+                }
+            }
+        });
     </script>
 </body>
 
