I updated the student list: changed the topic for Julieta Castro and deleted other entries.

--- a/Historia de cofla (B)/index.html
+++ b/Historia de cofla (B)/index.html
@@ -85,13 +85,7 @@
             { nombre: "Tomás Herrera", email: "tomi.herrera@example.com", materia: "Geografía" },
             { nombre: "Sofía Márquez", email: "sofia.mqz@mail.com", materia: "Lengua y Literatura" },
             { nombre: "Facundo Pérez", email: "facuperez@example.com", materia: "Química" },
-            { nombre: "Julieta Castro", email: "julicas@mail.com", materia: "Educación Cívica" },
-            { nombre: "Luciano Díaz", email: "luciano.dz@gmail.com", materia: "Informática" },
-            { nombre: "Martina López", email: "martina.lopez@mail.com", materia: "Filosofía" },
-            { nombre: "Agustín Romero", email: "agusromero@example.com", materia: "Matemática 2" },
-            { nombre: "Bianca Torres", email: "biancatorres@gmail.com", materia: "Economía" },
-            { nombre: "Ezequiel Ruiz", email: "eze.ruiz@mail.com", materia: "Educación Física" },
-            { nombre: "Renata Sánchez", email: "renasanchez@example.com", materia: "Arte" }
+            { nombre: "Julieta Castro", email: "julicas@mail.com", materia: "Informática" },
         ];
 
         const boton = document.querySelector(".btn-confirmar"); // botonazo
